--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
                 android:value="com.example.didier.stage1.MainActivity" />
 
         </activity>
+
+        <provider
+            android:name=".data.FavoriteFilmProvider"
+            android:authorities="com.example.didier.stage1"
+            android:exported="false" />
     </application>
 
 </manifest>
