--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name=".data.FavoriteFilmProvider"
             android:authorities="com.example.didier.stage1"
             android:exported="false" />
+        <provider
+            android:name=".movies.MovieDbProvider"
+            android:authorities="com.example.didier.stage1.movies"
+            android:exported="false" />
     </application>
 
 </manifest>
